--- a/wikiviewer/src/pages/index.html
+++ b/wikiviewer/src/pages/index.html
@@ -24,7 +24,7 @@ title: Wikiviewer
               <label class="search__label-active" for="trigger"></label>
               <div class="search__border"></div>
               <input id="search_input" type="text" class="search__input" />
-              <div class="search__close"></div>
+              <div id="search_close" class="search__close"></div>
             </form>
           </div>
         </div>
@@ -32,7 +32,8 @@ title: Wikiviewer
     </div>
     <div class="row align-center">
       <div class="random_button">
-        <a target="_blank" class="button hollow large rounded" href="https://en.wikipedia.org/wiki/Special:Random">Go Random</a>
+        <a id="random" target="_blank" class="button hollow large rounded">Go Random</a>
+        <a id="clear" target="_blank" class="button hollow large rounded">Clear</a>
       </div>
     </div>
 
