--- a/kindergruppen/index.html
+++ b/kindergruppen/index.html
@@ -260,7 +260,7 @@
     
     <div class="row top25">
       <div class="large-12 columns">
-        <img class="" src="/assets/img/gakiju.png" style=""/>
+        <img class="" src="./assets/img/gakiju.png" style="width:225px;height:auto;"/>
         <p class="partnertext">Die Dozenten sind Gründungsmitglieder und
         <br />Mitglieder der Arbeitsgemeinschaft Gruppenanalyse mit<br />Kindern und Jugendlichen e.V.</p>
       </div>
